# codex_simulator

./: .gitignore  =0.0.1  =0.3.0  =1.0.0  =2.3.0  =5.9.0  =6.0.0  CLAUDE.md  CODEX.md  README.md  activate_codex.sh  activate_py312.sh  bypass_test.py  calculate.py  check_environment.py  check_python_compatibility.py  create_symlink.sh  csv_reader_implementation.txt  debug_env.py  diagnose_imports.py  fix_dependencies.sh  fix_installation.sh  fix_venv.sh  generate_pie_chart.py  install_deps.py  install_deps_experimental.py  install_enhanced_deps.py  install_fixed_deps.py  install_globally.sh  install_mcp_deps.py  install_minimal.py  install_psutil.sh  install_requirements.sh  main_summary.txt  pyproject.toml  quick_fix.py  quick_install.sh  requirements-minimal.txt  requirements-test.txt  requirements.txt  (+21 more)
.github/: copilot-instructions.prompt.md
.venv312/: pyvenv.cfg
News archive/: latest_news.txt
config/: agents.yaml  nature_ui_config.yaml  tasks.yaml
docs/: MCP_INTEGRATION.md  MCP_USAGE_GUIDE.md  NATURE_UI_IMPROVEMENTS.md
knowledge/: user_preference.txt
src/codex_simulator/: __init__.py  __main__.py  crew.py  main.py  terminal_assistant.py
src/codex_simulator/api/: terminal_api.py
src/codex_simulator/commands/: slash_commands.py
src/codex_simulator/config/: agents.yaml  tasks.yaml
src/codex_simulator/context/: claude_context.py
src/codex_simulator/core/: __init__.py  agent_factory.py  state_tracker.py  terminal_crew.py
src/codex_simulator/flows/: __init__.py  crew_factories.py  state_manager.py  terminal_flow.py
src/codex_simulator/llms/: __init__.py  custom_gemini_llm.py
src/codex_simulator/mcp/: __init__.py  client.py  schemas.py  server.py  tool_wrapper.py
src/codex_simulator/permissions/: permission_manager.py
src/codex_simulator/session/: session_manager.py
src/codex_simulator/terminal/: claude_style_repl.py
src/codex_simulator/tests/: conftest.py  run_all_tests.py  test_delegate_tool.py  test_execution_profiler_tool.py  test_fs_cache_tool.py  test_mcp_integration.py  test_my_custom_tool.py  test_safe_directory_tool.py  test_safe_file_read_tool.py  test_safe_file_write_tool.py  test_safe_shell_tool.py  test_web_search.py  test_website_tool.py
src/codex_simulator/tools/: __init__.py  balance_monitor_tool.py  claude_tools.py  csv_reader_tool.py  custom_tool.py  delegate_tool.py  enhanced_shell_tool.py  execution_profiler_tool.py  fs_cache_tool.py  new_tools.py  pdf_reader_tool.py  safe_directory_tool.py  safe_file_read_tool.py  safe_file_write_tool.py  safe_shell_tool.py  serp_api_tool.py  software_architect_tool.py  systems_thinking_tool.py  translation_tool.py  website_tool.py
src/codex_simulator/ui/: terminal_ui.py
src/codex_simulator/ui/templates/: terminal_interface.html
src/codex_simulator/utils/: delegation_fix.py  environment_detector.py  file_operations.py  nature_integration.py  nature_ui.py  nature_welcome.py  organic_progress.py  performance_monitor.py  permission_manager.py  seasonal_themes.py  simple_knowledge.py  terminal_ui.py  tool_adapter.py  ubuntu_ui.py
test_venv/: pyvenv.cfg
