[project]
name = "codex_simulator"
version = "0.1.0"
description = "codex_simulator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12.7,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0",
    "argparse>=1.4.0",
    "langchain-google-genai>=0.0.1",
    "google-generativeai>=0.3.0"
]

[project.scripts]
codex_simulator = "codex_simulator.main:run"
run_crew = "codex_simulator.main:run"
train = "codex_simulator.main:train"
replay = "codex_simulator.main:replay"
test = "codex_simulator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
