[project]
name = "codex_simulator"
version = "0.1.0"
description = "codex_simulator using crewAI with Flow orchestration"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0",
    "argparse>=1.4.0",
    "langchain-google-genai>=0.0.1",
    "google-generativeai>=0.3.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
codex_simulator = "codex_simulator.main:run"
run_crew = "codex_simulator.main:run"
terminal_assistant = "codex_simulator.main:terminal_assistant"
terminal_flows = "codex_simulator.main:run_terminal_assistant_with_flows"
hybrid_mode = "codex_simulator.main:run_hybrid_mode"
train = "codex_simulator.main:train"
replay = "codex_simulator.main:replay"
test = "codex_simulator.main:test"
run_all_tests = "src.codex_simulator.tests.run_all_tests:run_tests"
codex-mcp-server = "codex_simulator.main:run_mcp_server_standalone"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
